<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->
    <string name="txt_upcoming_election">Upcoming Elections</string>
    <string name="txt_saved_elections">Saved Elections</string>
    <string name="txt_follow_election">Follow Election</string>
    <string name="txt_un_follow_election">Un follow Election</string>
    <string name="find_my_representative">Find my representative</string>
    <string name="use_my_location">Use my location</string>

    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming_elections_text">Upcoming Elections</string>
    <string name="saved_elections_text">Saved Elections</string>
    <string name="follow_election_button">Follow Election</string>
    <string name="voting_location">Voting Location</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="corresponding_address">Corresponding address</string>
    <string name="election_information">Election Information</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>

    <string name="profile_picture">Profile Picture</string>
    <string name="web_url">Web link</string>
    <string name="fb_url">Facebook link</string>
    <string name="twitter_url">Twitter link</string>
    <string name="my_representative">My Representative</string>
</resources>
